# quil-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  Readme.md  build.rs  clippy.toml  deny.toml  knope.toml  package.json  prepare_release.sh  quil.html  search.js
quil-cli/: CHANGELOG.md  Cargo.toml
quil-cli/src/: main.rs
quil-py/: .flake8  .stubtest-allowlist  2  CHANGELOG.md  Cargo.toml  Makefile.toml  README-py.md  README.md  example.py  make_docs.py  pyproject.toml  quil.html
quil-py/docs/: expression.html  instructions.html  program.html  search.js  validation.html
quil-py/docs/quil/: expression.html  instructions.html  program.html  validation.html  validation_bak.html
quil-py/docs/quil/validation/: identifier.html
quil-py/docs/quil/validation_bak/: identifier.html
quil-py/docs/validation/: identifier.html
quil-py/quil/: __init__.py  __init__.pyi  expression.py  expression.pyi  instructions.py  program.py
quil-py/quil/expression/: __init__.py  __init__.pyi
quil-py/quil/instructions/: __init__.py  __init__.pyi  _calibration.pyi  _expression.pyi  _gate.pyi  _measurement.pyi  _memory_region.pyi  _qubit.pyi
quil-py/quil/program/: __init__.py  __init__.pyi  _calibration.pyi
quil-py/quil/validation/: __init__.py  __init__.pyi  identifier.py  identifier.pyi
quil-py/quil/waveform/: __init__.py  __init__.pyi
quil-py/quil/waveforms/: __init__.py  __init__.pyi
quil-py/src/: expression.rs  lib.rs  units.rs  waveform.rs  waveforms.rs
quil-py/src/instruction/: arithmetic.rs  binary_logic.rs  calibration.rs  circuit.rs  classical.rs  control_flow.rs  declaration.rs  expression.rs  extern_call.rs  frame.rs  gate.rs  measurement.rs  memory_reference.rs  memory_region.rs  mod.rs  pragma.rs  qubit.rs  reset.rs  timing.rs  waveform.rs
quil-py/src/program/: analysis.rs  calibration.rs  calibration_set.rs  frame.rs  memory.rs  mod.rs  scheduling.rs  source_map.rs
quil-py/src/validation/: identifier.rs  mod.rs
quil-py/test/: test_eq.py
quil-py/test/instructions/: test_copy.py  test_extern_call.py  test_gate.py
quil-py/test/program/: test_program.py
quil-py/test/program/__snapshots__/: test_program.ambr
quil-py/tests_py/: test_eq.py  test_waveform.py  test_waveforms.py
quil-py/tests_py/instructions/: test_copy.py  test_gate.py
quil-py/tests_py/program/: test_program.py
quil-py/tests_py/program/__snapshots__/: test_program.ambr
quil-rs/: CHANGELOG.md  Cargo.toml  Makefile.toml  README-py.md  README.md  build.rs  pyproject.toml
quil-rs/.cargo/: config.toml
quil-rs/benches/: corpus.rs  expressions.txt  get_frames_for_instruction.rs  parser.rs  scheduled_program_from_program.rs  simplification.rs  test_expressions.txt
quil-rs/examples/: generate_test_expressions.rs
quil-rs/proptest-regressions/: expression.txt
quil-rs/proptest-regressions/expression/: mod.txt
quil-rs/python/: stubtest-allowlist
quil-rs/python/quil/: __init__.py  __init__.pyi  expression.pyi  instructions.pyi  program.pyi  waveform.pyi  waveforms.pyi
quil-rs/python/quil/program/: __init__.py
quil-rs/python/quil/validation/: identifier.pyi
quil-rs/python/quil/waveform/: __init__.pyi  sampling.pyi
quil-rs/scripts/: check-quil-api.sh  lint-quil-rs.py
quil-rs/scripts/pyo3_linter/: __init__.py  macros.py  package.py  parser.py  reader.py
quil-rs/scripts/pyo3_linter/tests/: conftest.py  test_examples.py  test_item.py
quil-rs/src/: expression.rs  filter_set.rs  floating_point_eq.rs  hash.rs  instruction.rs  lib.rs  quil.rs  reserved.rs  units.rs
quil-rs/src/expression/: arena.rs  mod.rs  quilpy.rs  simplification.rs  simplification_2.rs
quil-rs/src/expression/simplification/: by_egg.rs  by_hand.rs  mod.rs
quil-rs/src/instruction/: arithmetic.rs  calibration.rs  circuit.rs  classical.rs  control_flow.rs  declaration.rs  extern_call.rs  frame.rs  gate.rs  gate_sequence.rs  handler.rs  label.rs  measurement.rs  mod.rs  pragma.rs  qubit.rs  quilpy.rs  reset.rs  timing.rs  waveform.rs
quil-rs/src/instruction/snapshots/: quil_rs__instruction__calibration__test_measure_calibration_definition__display@Effect Variable Qubit.snap  quil_rs__instruction__calibration__test_measure_calibration_definition__display@Effect With Fixed Qubit.snap  quil_rs__instruction__calibration__test_measure_calibration_definition__display@Named Effect Variable Qubit.snap  quil_rs__instruction__calibration__test_measure_calibration_definition__display@Named Effect With Fixed Qubit.snap  quil_rs__instruction__calibration__test_measure_calibration_definition__display@Named With Fixed Qubit.snap  quil_rs__instruction__calibration__test_measure_calibration_definition__display@Named With Variable Qubit.snap  quil_rs__instruction__calibration__test_measure_calibration_definition__display@With Fixed Qubit.snap  quil_rs__instruction__declaration__test_declaration__DECLARE ro BIT[1].snap  (+19 more)
quil-rs/src/parser/: command.rs  common.rs  expression.rs  gate.rs  instruction.rs  macros.rs  mod.rs  pragma_extern.rs  reserved_pragma_extern.rs  token.rs
quil-rs/src/program/: calibration.rs  calibration_set.rs  control_flow_graph.rs  defgate_sequence_expansion.rs  frame.rs  graph.rs  graphviz_dot.rs  memory.rs  mod.rs  quilpy.rs  source_map.rs  type_check.rs
quil-rs/src/quil_py/: errors.rs  mod.rs  units.rs
quil-rs/src/quilpy/: errors.rs  mod.rs
quil-rs/src/stats/: execution_graph.rs  mod.rs  test_programs.rs
quil-rs/src/validation/: identifier.rs  mod.rs  quilpy.rs
quil-rs/src/waveform/: builtin.rs  higher_kinded.rs  mod.rs  quilpy.rs  sampling.rs  templates.rs
quil-rs/tests/: calibration_test.rs
quil-rs/tests/snapshots/: calibration_test__calibration_cz.quil.snap  calibration_test__calibration_cz_phase.quil.snap  calibration_test__calibration_measure.quil.snap  calibration_test__calibration_rx.quil.snap  calibration_test__calibration_xy.quil.snap
quil-rs/tests_py/: conftest.py  test_eq.py  test_waveforms.py
quil-rs/tests_py/instructions/: test_copy.py  test_gate.py  test_pickle.py
quil-rs/tests_py/program/: test_program.py
src/: lib.rs  (+4 more)
(+877 files in other folders)
