[package]
name = "quil-rs"
description = "Rust tooling for Quil (Quantum Instruction Language)"
version ="0.13.3"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rigetti/quil-rust"
keywords = ["Quil", "Quantum", "Rigetti"]
categories = ["parser-implementations", "science", "compilers", "emulators"]

[dependencies]
dot-writer = { version = "0.1.2", optional = true }
indexmap = "1.6.1"
lexical = "6.1.1" 
nom = "7.1.1"
nom_locate = "4.0.0"
num-complex = "0.4.0"
petgraph = "0.5.1"
serde = { version = "1.0.125", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
insta = "1.7.1"
proptest = "1.0.0"
proptest-derive = "0.3.0"
rstest = "0.15.0"

[features]
graphviz-dot = ["dot-writer"]

[[bench]]
name = "parser"
harness = false
