[workspace]
default-members = ["quil-rs"]
members = ["quil-rs", "quil-cli"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
# This is managed by knope to keep quil-cli's dependency on quil-rs up-to-date.
quil-rs = { path = "quil-rs", version = "0.32.0" }
strum = { version = "0.26.0", features = ["derive"] }
indexmap = "2.10.0"
