[package]
name = "quil-cli"
version = "0.11.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is managed by knope to keep the dependency on quil-rs up-to-date.
quil-rs = { path = "../quil-rs", version = "0.34.0" }
clap =  {version = "4.5.4", features = ["derive"]}
anyhow = "1.0.81"
