[package]
name = "quil-cli"
version = "0.12.0-rc.5"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { workspace = true, features = ["derive"]}
# This is managed by knope to keep the dependency on quil-rs up-to-date.
quil-rs = { path = "../quil-rs", version = "0.35.0-rc.5" }
