[package]
name = "quil-py"
description = "Python bindings for quil-rs"
version = "0.17.0-rc.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rigetti/quil-rs"
keywords = ["pyquil", "SDK", "Rigetti", "Quil", "Quantum"]
categories = ["api-bindings", "parser-implementations", "science", "emulators"]
readme = "./README.md"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import quil`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "quil"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use quil;` unless the "lib" and "rlib" crate type is also included:
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray.workspace = true
quil-rs = { path = "../quil-rs", version = "0.32.0-rc.1" }
strum.workspace = true
# pyo3 dependencies should be updated together
numpy = "0.20.0"
pyo3 = { version = "0.20.3", features = ["indexmap"] }
rigetti-pyo3 = { version = "0.4.3", features = ["indexmap"] }
indexmap.workspace = true
num-complex = "0.4.6"
internment = { version = "0.8.6", features = ["arc"] }

[build-dependencies]
pyo3-build-config = "0.20.0"
