[project]
name = "quil"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
	{ name = "Rigetti Computing", email = "softapps@rigetti.com" },
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Operating System :: OS Independent",
]

[tool.maturin]
features = ["pyo3/extension-module"]
bindings = "pyo3"
compatibility = "linux"
sdist-include = ["README.md"]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
