[project]
name = "quil"
requires-python = ">=3.8"
description = "A Python package for building and parsing Quil programs."
readme = "README-py.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Rigetti Computing", email = "softapps@rigetti.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]

# PEP 621 specifies the [project] table as the source for project metadata. However, Poetry only supports [tool.poetry]
# We can remove this table once this issue is resolved: https://github.com/python-poetry/poetry/issues/3332
[tool.poetry]
name = "quil"
version = "0.5.8"
description = "A Python package for building and parsing Quil programs."
readme = "README-py.md"
authors = ["Rigetti Computing <softapps@rigetti.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
maturin = "^1.2.3"
mypy = "^1.1.1"
pytest = "^7.2.2"

[tool.maturin]
features = ["pyo3/extension-module"]
bindings = "pyo3"
compatibility = "linux"
sdist-include = ["README.md"]

[build-system]
requires = ["maturin>=1.0.0,<2.0.0"]
build-backend = "maturin"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
