[package]
name = "quil-rs"
description = "Rust tooling for Quil (Quantum Instruction Language)"
version = "0.35.0-rc.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/rigetti/quil-rs"
keywords = ["Quil", "Quantum", "Rigetti"]
categories = ["parser-implementations", "science", "compilers", "emulators"]

[lib]
name = "quil_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
dot-writer = { version = "0.1.2", optional = true }
internment = { version = "0.8.6", default-features = false, features = ["arc"] }
itertools = "0.12.1"
lexical = { version = "7.0.5", features = ["format", "power-of-two"] }
ndarray = { version = "0.17.1", features = ["approx"] }
nom = "7.1.1"
nom_locate = "4.0.0"
num-complex = "0.4.6"
once_cell = "1.17.1"
optipy = "0.1.0"
petgraph = "0.6.4"
regex = "1.7.1"
serde = { version = "1.0.125", features = ["derive"] }
strum = { version = "0.26.0", features = ["derive"] }
thiserror = "1.0.56"
indexmap = "2.10.0"
statrs = "0.16.0"
paste = "1.0.15"

# Enabled with the "python" feature.
numpy = { version = "0.27.1", optional = true }
pyo3 = { version = "0.27.2", features = ["indexmap", "num-complex", "multiple-pymethods"], optional = true }
rigetti-pyo3 = { version = "0.5.0", optional = true }

# Enabled with the "stubs" feature.
pyo3-stub-gen = { version = "0.17.2", features = ["numpy"], optional = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive", "string"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = "1.37.0"
petgraph = "0.6.2"
pretty_assertions = "1.4.0"
proptest = "1.0.0"
proptest-derive = "0.5.1"
rand = "0.8.5"
rasciigraph = "0.2.0"
rstest = "0.18.2"

[build-dependencies]
pyo3-build-config = { version = "0.27.2", optional = true }

# These are described in the crate README.md
[features]
graphviz-dot = ["dep:dot-writer"]
wasm-bindgen = []
python = [ "dep:numpy", "dep:pyo3", "dep:pyo3-build-config", "dep:rigetti-pyo3" ]
stubs = [ "python", "dep:pyo3-stub-gen", "rigetti-pyo3/stubs" ]

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "get_frames_for_instruction"
harness = false

[[bench]]
name = "scheduled_program_from_program"
harness = false

[[bench]]
name = "simplification"
harness = false

[[example]]
name = "generate_test_expressions"

